# ModHook

./: Cargo.toml  build.rs
.cargo/: config.toml
configs/templates/: moonlight.toml
crates/gui/: Cargo.toml
crates/gui-new/: Cargo.toml
crates/gui-new/src/: app.rs  assets.rs  constants.rs  lib.rs
crates/gui-new/src/components/: home_page.rs  mod_from_template_page.rs  mod_page.rs  profile_page.rs  settings_page.rs  sidebar.rs
crates/gui-new/src/utils/: hoverable.rs  icons.rs
crates/gui/src/: app.rs  assets.rs  constants.rs  lib.rs
crates/gui/src/components/: button.rs  custom_button.rs  home_page.rs  main_content.rs  mod.rs  mod_from_template_page.rs  mod_page.rs  popup.rs  profile_page.rs  sidebar.rs
crates/gui/src/pages/: create_profile.rs  home.rs  mod.rs  selected_profile.rs  settings.rs
crates/gui/src/popups/: already_launched.rs  create_instance.rs  delete_instance.rs  delete_profile.rs  launching.rs  mod.rs
crates/gui/src/utils/: icons.rs  images.rs  launch.rs  mod.rs
crates/libdiscord-modloader/: Cargo.toml
crates/libdiscord-modloader/src/: config.rs  lib.rs  unix.rs  updater.rs
crates/modloader-core/: Cargo.toml
crates/modloader-core/src/: cache.rs  config.rs  discord.rs  lib.rs  paths.rs  updater.rs  utils.rs
crates/modloader-core/src/asar/: custom_profile.js  require.js
src/: lib.rs  main.rs
