[package]
name = "gui-new"
version = "0.1.0"
edition = "2024"

[dependencies]
dialog = "0.3.0"
dioxus = { version = "0.6.2", features = [
    "macro",
    "hooks",
], default-features = false }
dirs = "6.0.0"
flate2 = "1.0.35"
freya = { git = "https://github.com/marc2332/freya.git", rev = "9f3439c97c6845dfe12417e59f827c31b80e2724" }
itertools = "0.14.0"
libc = "0.2.167"
libdiscord-modloader = { path = "../libdiscord-modloader", default-features = false }
open = "5.3.1"
serde = "1.0.217"
serde_json = "1.0.135"
strum = "0.26.3"
sysinfo = "0.33.0"
tar = "0.4.43"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
toml = "0.8.19"
ureq = { version = "2.12.1", features = ["json"] }
uuid = { version = "1.11.0", features = ["v4"] }
