[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
dialog = "0.3.0"
dioxus = "0.6.1"
dirs = "6.0.0"
flate2 = "1.0.35"
freya = { git = "https://github.com/marc2332/freya.git", version = "0.3.0-rc.0" }
itertools = "0.14.0"
libc = "0.2.167"
libdiscord-modloader = { path = "../libdiscord-modloader", default-features = false }
open = "5.3.1"
serde = "1.0.217"
serde_json = "1.0.135"
sysinfo = "0.33.0"
tar = "0.4.43"
toml = "0.8.19"
ureq = { version = "2.12.1", features = ["json"] }
uuid = { version = "1.11.0", features = ["v4"] }
