[package]
name = "gui"
version = "0.2.0-beta.1"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
dirs = "6.0.0"
freya = { git = "https://github.com/marc2332/freya.git", rev = "72022bdb3275cdd4b1c007196b8e6de28dbaae31" }
modloader-core = { path = "../modloader-core" }
open = "5.3.1"
strum = "0.26.3"
sysinfo = "0.33.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
toml = "0.8.19"
uuid = { version = "1.11.0", features = ["v4"] }
