[package]
name = "libdiscord-modloader"
version = "0.1.0"
edition = "2021"

[lib]
name = "discord_modloader"
crate-type = ["cdylib", "lib"]

[dependencies]
asar = "0.3.0"
dirs = "5.0.1"
flate2 = "1.0.35"
octocrab = { version = "0.42.1", default-features = false }
serde = { version = "1.0.210", features = ["serde_derive"] }
serde_json = "1.0.135"
strum = { version = "0.26.3", features = ["derive"] }
sysinfo = "0.33.0"
tar = "0.4.43"
toml = "0.8.19"
ureq = { version = "2.12.1", features = ["json"] }
zip = "2.2.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "winbase",
    "handleapi",
    "minwindef",
    "consoleapi",
    "winnt",
    "memoryapi",
    "namedpipeapi",
] }
detours-sys = { version = "0.1.2" }
widestring = "1.1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.167"
retour = { version = "0.3.1", features = ["static-detour"] }
